fix(search): loading indicator jumps

--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -20,3 +20,7 @@ rms-album-card {
 rms-artist-card {
     margin: 0 8px;
 }
+
+.pending-container {
+    height: calc(100vh - 216px);
+}
